--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/products
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=create
+spring.java.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
