--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/products
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.java.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
