--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/products
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.java.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.liquibase.change-log=classpath:db/changelog/app-changelog.xml
+spring.liquibase.enabled=true
